[gd_scene load_steps=10 format=2]

[ext_resource path="res://_assets/objetos/arvore/troncoLife.png" type="Texture" id=1]
[ext_resource path="res://objetos/Arvore.gd" type="Script" id=2]
[ext_resource path="res://_assets/efeitos/021-Light01.png" type="Texture" id=8]
[ext_resource path="res://_assets/objetos/arvore/mioloNormalizado.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.5, 14 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.607843, 0.0117647, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.27451, 0.00784314, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 20

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("copaAdulata:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node/ProgressBar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "brilho"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("efeito:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 3, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("efeito:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Conta_Dano"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "copaAdultaCaindo"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("copaAdulata:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.4, 3 ),
"transitions": PoolRealArray( 3.4822, 0.148651, 0.420449, 1 ),
"update": 0,
"values": [ 0.0, 95.0, 85.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("copaAdulata:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.4, 2.9 ),
"transitions": PoolRealArray( 1, 0.87055, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("copaAdulata:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node/ProgressBar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ArvoreCortada"
} ]
}

[node name="Arvore" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -1 )
texture = ExtResource( 1 )
vframes = 3
frame = 1
region_rect = Rect2( 0, 160, 128, 160 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[node name="copaBroto" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 4 )
z_index = 1

[node name="copa" type="Sprite" parent="copaBroto"]
position = Vector2( -1, -36 )
texture = ExtResource( 9 )

[node name="copaJovem" type="Node2D" parent="."]
position = Vector2( 0, -3 )
z_index = 1

[node name="copa5" type="Sprite" parent="copaJovem"]
position = Vector2( 2, -35 )
texture = ExtResource( 9 )
offset = Vector2( -2, 9 )

[node name="copa4" type="Sprite" parent="copaJovem"]
position = Vector2( -1, -60 )
texture = ExtResource( 9 )
offset = Vector2( -2, 9 )

[node name="copa" type="Sprite" parent="copaJovem"]
position = Vector2( 12, -29 )
texture = ExtResource( 9 )

[node name="copa2" type="Sprite" parent="copaJovem"]
position = Vector2( -16, -33 )
texture = ExtResource( 9 )
offset = Vector2( 0, 5 )

[node name="copaAdulata" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 2 )

[node name="copa" type="Sprite" parent="copaAdulata"]
position = Vector2( -1, -29 )
texture = ExtResource( 9 )

[node name="copa2" type="Sprite" parent="copaAdulata"]
position = Vector2( -28, -38 )
texture = ExtResource( 9 )
offset = Vector2( 0, 5 )

[node name="copa3" type="Sprite" parent="copaAdulata"]
position = Vector2( 27, -35 )
texture = ExtResource( 9 )

[node name="copa4" type="Sprite" parent="copaAdulata"]
position = Vector2( -31, -66 )
texture = ExtResource( 9 )
offset = Vector2( 0, 5 )

[node name="copa5" type="Sprite" parent="copaAdulata"]
position = Vector2( -5, -89 )
texture = ExtResource( 9 )
offset = Vector2( 0, 5 )

[node name="copa6" type="Sprite" parent="copaAdulata"]
position = Vector2( 24, -65 )
texture = ExtResource( 9 )

[node name="copa7" type="Sprite" parent="copaAdulata/copa6"]
position = Vector2( -29, 7 )
texture = ExtResource( 9 )

[node name="efeito" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
hframes = 5
vframes = 3
frame = 5

[node name="Node" type="Node2D" parent="."]
z_index = 1

[node name="ProgressBar" type="ProgressBar" parent="Node"]
visible = false
margin_left = -34.0
margin_top = -58.0
margin_right = 34.0
margin_bottom = -44.0
grow_horizontal = 0
custom_styles/fg = SubResource( 2 )
step = 1.0
value = 100.0
rounded = true
percent_visible = false

[node name="show" type="Timer" parent="Node/ProgressBar"]
wait_time = 2.0

[node name="Tween" type="Tween" parent="Node/ProgressBar"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/brilho = SubResource( 5 )
anims/copaAdultaCaindo = SubResource( 6 )

[connection signal="timeout" from="Node/ProgressBar/show" to="." method="_on_show_timeout"]
